# GigaChatCLI

./: .gigachat.example  .gitignore  README.md  asd  pyproject.toml  requirements.txt
src/: agent.py  commands.py  data.py  main.py  prompt.py  styling.py  tools.py
