[project]
name = "gigachatcli"
version = "0.1.0"
description = "GigaChatCLI"
requires-python = ">=3.8"
dependencies = [
    "gigachat",
    "rich",
    "prompt-toolkit",
]

[project.scripts]
gigachat = "main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
