[project]
name = "gigachatcli"
version = "1.1.0"
description = "GigaChatCLI"
dependencies = [
    "gigachat",
    "rich",
    "prompt-toolkit",
    "ddgs",
    "python-dotenv"
]

[project.scripts]
gigachat = "main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
